# ASRTerminal

./: .env.example  .gitignore  Fun-ASR.md  README.md  README_CN.md  pyproject.toml  requirements.txt  setup.py
.claude/: settings.local.json
config/: config.yaml  engines.yaml
docs/: FUNASR_ENGINE_GUIDE.md  FUNASR_ENGINE_RELEASE.md  QWEN_ENGINE_GUIDE.md  QWEN_ENGINE_RELEASE.md
src/asr_terminal/: exceptions.py  service.py
src/asr_terminal/audio/: processor.py  vad.py
src/asr_terminal/cli/: main.py
src/asr_terminal/config/: manager.py
src/asr_terminal/engines/: __init__.py  base.py  factory.py  funasr_engine.py  qwen_engine.py  whisper_engine.py
src/asr_terminal/models/: transcript.py
src/asr_terminal/utils/: logger.py  retry.py
tests/: test_funasr_engine.py  test_qwen_engine.py
